testsuite/tests/saks/should_fail/saks_fail021.stderr

saks_fail021.hs:10:1: error:
    • Expected a type, but ‘a’ has kind ‘k’
    • In the class declaration for ‘C’
